# opengl-testing

./: CMakeLists.txt
glad/: glad.c
include/glad/: glad.h
src/: shader.h  textures.cpp  textures2.cpp
src/archive/: square.cpp  triangle1.cpp  triangle2.cpp
src/archive/shaders/: basic.vert
src/shaders/: tex.vert
